Added new projects and updated resume.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Projects Section -->
     <section class="projects" id="projects">
         <h1>Projects</h1>
-        <h2 id="note">(For phones/tablets, touch to go to github)</h2>
+        <h2 id="note">(More Projects <a href="https://github.com/naetsawd?tab=repositories" target="_blank"><strong>Here</strong></a>)</h2>
         <div class="projects_wrapper">
             <a class="projects_card" href="https://github.com/naetsawd/QuickBid.git" target="_blank">
                 <h2>QuickBid</h2>   
@@ -93,7 +93,7 @@
                         learn basic styling with CSS.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and live demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Python, Django, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Python, Django, Html & CSS</p>
                     </div>
                 </div>
             </a>
@@ -106,11 +106,11 @@
                         along with the menu items are inspired by a retro arcade and pixel theme.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and live demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Javascript, Node.js, Webpack, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Javascript, Node.js, Webpack, Html & CSS</p>
                     </div>
                 </div>
             </a>
-            <a class="projects_card" href="https://github.com/naetsawd/2048-Game.git" target="_blank">
+            <!-- <a class="projects_card" href="https://github.com/naetsawd/2048-Game.git" target="_blank">
                 <h2>2048 Game</h2>
                 <div class= "projects_desc">
                     <p>
@@ -121,15 +121,30 @@
                         <p>Click for more info<br> (Redirects to GitHub) <br><br> Used: Java</p>
                     </div>
                 </div>
-            </a>
-            <a class="projects_card" href="" target="_blank">
-                <h2>Upcoming Project</h2>
+            </a> -->
+            <a class="projects_card" href="https://github.com/naetsawd/OdinProject-ToDoList" target="_blank">
+                <h2><span>&#0172;</span>Unorganized</h2>
+                <img src="Images/Unorganized.png">
                 <div class= "projects_desc">
                     <p>
-                        This card is a place holder for a future project and will be replaced.
+                        "Not Unorganized" is a todo list website with a minimalistic design. It has a general inbox with today and month sorting as well
+                        as the ability to made projects with their own seperate tasks. All tasks and lists are stored using the browser's inbuilt local storage.
                     </p>
                     <div class= "devstack">
-                        <!-- <p>Click for more info<br> (Redirects to GitHub) <br><br> Used: Java</p> -->
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Node.js, Webpack, Html & CSS</p>
+                    </div>
+                </div>
+            </a>
+            <a class="projects_card" href="https://github.com/naetsawd/OdinProject-WeatherApp" target="_blank">
+                <h2>Tempest</h2>
+                <img src="Images/Tempest.png">
+                <div class= "projects_desc">
+                    <p>
+                        Tempest is a weather app that fetches all its data using the weatherAPI. It has a user friendly UI that is simple and easy
+                        on the eyes. In addition, the website's background changes based on the time of day at the target location.
+                    </p>
+                    <div class= "devstack">
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: weatherAPI, Node.js, Webpack, Html & CSS</p>
                     </div>
                 </div>
             </a>
