Added CV Planner project.

--- a/index.html
+++ b/index.html
@@ -55,25 +55,22 @@
                 <h1>About Me</h1>
                 <p>
                     Hi, my name is Dechsit Naetsawan, and I am a recent graduate from McMaster University, 
-                    where I pursued a double major in Mathematics and Computer Science. I am seeking opportunities 
-                    to gain hands-on experience and valuable knowledge in any field related to software development 
-                    or data analysis.
+                    where I studied Mathematics and Computer Science. I am seeking opportunities to gain hands-on experience 
+                    and valuable knowledge in numerous tech roles with a keen interet in front-end or full-stack development.
                 </p>    
                 <p>
-                    I am a curious individual and love learning about how things work, especially when it comes to technology. 
-                    The software of any modern piece of technology is one of the most important and flexible elements; hence, 
-                    I wanted to be a software developer as software has possibly an infinite number of applications. In addition
-                    , I find coding enjoyable, as there are different ways to approach a problem, and this trait allows for creative 
-                    freedom, not to mention the satisfaction you get when your code finally works. It has even impacted me as a person 
-                    by making me better at problem-solving, improving my attention to detail, and even noticing small things like how 
-                    certain features or designs work on a website or software. Even though it can be frustrating, there are many reasons 
-                    why I enjoy coding.
+                    I am a curious individual and love learning about what makes things tick, especially when it comes to technology. 
+                    Coding very enjoyable for me as there are different ways to approach a problem. This trait allows for creative 
+                    freedom, not to mention the satisfaction you get when your code finally works and your solution is efficient. 
+                    It has even impacted me as a person by making me better at problem-solving, improving my attention to detail, and 
+                    even noticing small things like how certain features or designs work on a website or software. Even though it can be 
+                    frustrating, there are many reasons why I enjoy coding and why I have a keen interest in a web development position.
                 </p>
                 <p>
                     As a somewhat reserved individual, I spent a lot of my childhood playing video games and sticking to the friends I had
                     , without making many new ones. However, as I grew older, I made an effort to change. During my time at university, I 
                     enjoyed meeting new people, working in teams, and learning about different cultures. Now that I have graduated, I miss 
-                    these experiences and hope work in environments where I can experience these things again.
+                    these experiences and hope to work in environments where I can experience these things again.
                 </p>
             </div>
         </div>
@@ -144,7 +141,20 @@
                         on the eyes. In addition, the website's background changes based on the time of day at the target location.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: weatherAPI, Node.js, Webpack, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: weatherAPI, Node.js, Webpack, Javascript, Html & CSS</p>
+                    </div>
+                </div>
+            </a>
+            <a class="projects_card" href="https://github.com/naetsawd/OdinProject-CVMaker" target="_blank">
+                <h2>CV Planner</h2>
+                <img src="Images/CVPlanner.png">
+                <div class= "projects_desc">
+                    <p>
+                        CV Planner is a website where you can go to plan your CV and get an idea of how to set it up in one page with a format that is very popular.
+                        Users are able to add multiple education, experience and project items according to their liking and even download their prototype.
+                    </p>
+                    <div class= "devstack">
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: React.js, Node.js, JavaScript, Html & CSS</p>
                     </div>
                 </div>
             </a>
