Updated CV, skills and projects.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         learn basic styling with CSS.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Python, Django, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br> Used: Python, Django, Html & CSS</p>
                     </div>
                 </div>
             </a>
@@ -103,7 +103,7 @@
                         along with the menu items are inspired by a retro arcade and pixel theme.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Javascript, Node.js, Webpack, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br> Used: Javascript, Node.js, Webpack, Html & CSS</p>
                     </div>
                 </div>
             </a>
@@ -115,7 +115,7 @@
                         process we were individually tasked with recreating the popular 2048 game with a text based GUI using Java.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info<br> (Redirects to GitHub) <br><br> Used: Java</p>
+                        <p>Click for more info<br> (Redirects to GitHub) <br> Used: Java</p>
                     </div>
                 </div>
             </a> -->
@@ -128,7 +128,7 @@
                         as the ability to made projects with their own seperate tasks. All tasks and lists are stored using the browser's inbuilt local storage.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: Node.js, Webpack, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br> Used: Node.js, Webpack, Html & CSS</p>
                     </div>
                 </div>
             </a>
@@ -141,7 +141,7 @@
                         on the eyes. In addition, the website's background changes based on the time of day at the target location.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: weatherAPI, Node.js, Webpack, Javascript, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br> Used: weatherAPI, Node.js, Webpack, Javascript, Html & CSS</p>
                     </div>
                 </div>
             </a>
@@ -154,7 +154,20 @@
                         Users are able to add multiple education, experience and project items according to their liking and even download their prototype.
                     </p>
                     <div class= "devstack">
-                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br><br> Used: React.js, Node.js, JavaScript, Html & CSS</p>
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br> Used: Vite, React.js, Node.js, JavaScript, Html & CSS</p>
+                    </div>
+                </div>
+            </a>
+            <a class="projects_card" href="https://github.com/naetsawd/OdinProject-MemoryCard" target="_blank">
+                <h2>R&M Memory Card Game</h2>
+                <img src="Images/R&MMCG.png">
+                <div class= "projects_desc">
+                    <p>
+                        The Rick and Morty Memory Card Game is a simple game inspired by one of my favorite shows. The goal is to select all the cards while avoiding ones you 
+                        have previously selected. Enjoy the game with three different difficulties.
+                    </p>
+                    <div class= "devstack">
+                        <p>Click for more info and demo<br> (Redirects to GitHub, demo in README) <br> Used: Vite, React.js, Node.js, Apollo GraphlQL, JavaScript, Html & CSS</p>
                     </div>
                 </div>
             </a>
@@ -174,6 +187,10 @@
                     <span class="iconify" data-icon="logos:java" data-width="100" data-height="100"></span>
                     <span class="skills_text">Java</span>
                 </li class="skills_icon">
+                <li class="skills_icon">
+                    <span class="iconify"  data-icon="logos:c-plusplus" data-width="100" data-height="100"></span>
+                    <span class="skills_text">C++</span>
+                </li>
                 <li class="skills_icon">
                     <span class="iconify" data-icon="skill-icons:javascript" data-width="100" data-height="100"></span>
                     <span class="skills_text">Javascript</span>
@@ -196,15 +213,31 @@
                 </li>
                 <li class="skills_icon">
                     <span class="iconify" data-icon="vscode-icons:file-type-node" data-width="100" data-height="100"></span>
-                    <span class="skills_text">Node.JS</span>
+                    <span class="skills_text">Node.js</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify" data-icon="logos:jest" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Jest</span>
                 </li>
                 <li class="skills_icon">
                     <span class="iconify" data-icon="logos:react" data-width="100" data-height="100"></span>
-                    <span class="skills_text">React</span>
+                    <span class="skills_text">React.js</span>
                 </li>
                 <li class="skills_icon">
-                    <span class="iconify" data-icon="vscode-icons:file-type-jenkins" data-width="100" data-height="100"></span>
-                    <span class="skills_text">Jenkins</span>
+                    <span class="iconify"  data-icon="vscode-icons:file-type-vite" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Vite</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify"  data-icon="logos:graphql" data-width="100" data-height="100"></span>
+                    <span class="skills_text">GraphQL</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify"  data-icon="icon-park:api" data-width="100" data-height="100"></span>
+                    <span class="skills_text">REST</span>
+                </li>
+                <li class="skills_icon">
+                    <span class="iconify"  data-icon="logos:figma" data-width="100" data-height="100"></span>
+                    <span class="skills_text">Figma</span>
                 </li>
             </ul>
         </div>
